fixed spacing header mainpage

--- a/src/screens/MainPage/style.css
+++ b/src/screens/MainPage/style.css
@@ -140,7 +140,7 @@
   height: 137px;
   left: 870px;
   position: absolute;
-  top: 98px;
+  top: 48px;
   width: 566px;
 }
 
@@ -194,7 +194,7 @@
   height: 168px;
   left: 72px;
   position: absolute;
-  top: 83px;
+  top: 48px;
   width: 524px;
 }
 
@@ -250,7 +250,7 @@
   height: 377px;
   left: 72px;
   position: absolute;
-  top: 350px;
+  top: 315px;
   width: 1095px;
 }
 
